Implement security middleware (Arcjet & auth), add controllers, and update app config

--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
   },
   "homepage": "https://github.com/youssefsafwat2/subscription-tracker#readme",
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.8",
+    "@arcjet/node": "^1.0.0-beta.8",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
     "node-cron": "^4.1.0"
   },
   "devDependencies": {
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.10"
   }
 }
